# iRobotCreate2

./: .gitignore  .gitmodules
archive/ir_master/: package.xml
archive/ir_master/include/: ir_rw.h  ir_setup.h
archive/ir_odom/: package.xml
archive/ir_odom/include/: mpu9250.h
archive/ir_odom/msg/: Magnet.msg
archive/kinect_proc/include/: kinect_proc_node.h
archive/teleop/: package.xml
archive/teleop/src/: teleop_node.py
ir_master/: CMakeLists.txt  package.xml
ir_master/include/: ir_rw.h  ir_setup.h
ir_master/msg/: encoderCount.msg
ir_master/src/: ir_master_node.cpp
ir_odom/: CMakeLists.txt  package.xml
ir_odom/include/: imu__init.h  move_base.h  odometry.h
ir_odom/launch/: sensor_stream.launch
ir_odom/msg/: Euler.msg  MPU.msg  Odometry.msg  VelocityM.msg
ir_odom/src/: .goutputstream-4I7540  ahrs.cpp  best_fit.cpp  imu__init.cpp  move_base_node.cpp  mpu9250_main.cpp  mpu9250_setup.cpp  odometry.cpp
kinect_proc/: CMakeLists.txt  package.xml
kinect_proc/src/: kinect_proc_node.cpp
master/: CMakeLists.txt  package.xml
master/include/: create_comm.h  create_config.h  create_headers.h
master/src/: create_comm.cpp  create_config.cpp  master_main.cpp
myrobot_description/: CMakeLists.txt  package.xml
myrobot_description/src/: parser.cpp
myrobot_description/urdf/: create_model.urdf.xacro
teleop/: CMakeLists.txt  setup.py
teleop/src/: teleop_node.py
