<?xml version="1.0"?>
<package format="2">
 
  <name>myrobot_description</name>
  <version>1.0.0</version>
  <description>The myrobot_description package</description>
  
  <maintainer email="TTaylorStephen@gmail.com">Stephen Taylor</maintainer>
  <author email="TTaylorStephen@gmail.com">Stephen Taylor</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/urdf/Tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
