<?xml version="1.0"?>
<package format="2">
  <name>ir_master</name>
  <version>1.0.0</version>
  <description>The ir_master package</description>
  
  <maintainer email="TTaylorStephen@gmail.com">Stephen Taylor</maintainer>
  <author email="TTaylorStephen@gmail.com">Stephen Taylor</author>
  <license>BSD</license>
  
  <depend>ir_odom</depend>
  <build_depend>SensorStream</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
</package>
