<?xml version="1.0"?>
<package format="2">
  <name>ir_odom</name>
  <version>1.0.0</version>
  <description>This package reads/processes sensor data</description>
  <maintainer email="TTaylorStephen@gmail.com">stephen</maintainer>
  <license>BSD</license>
  <author>Stephen Taylor</author>
  
  <depend>roscpp</depend> 
  <depend>std_msgs</depend> 
  <depend>geometry_msgs</depend> 
  <depend>rospy</depend> 
  <depend>rqt_plot</depend>   
  <depend>Euler</depend>
  <depend>Magnet</depend>
  <build_depend>libusb-dev</build_depend>
  <build_depend>message_generation</build_depend> <!-- both used for message generation --> 
  <exec_depend>libusb-dev</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/ir_odom</url> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
