<?xml version="1.0"?>
<package format="2">
	<name>teleop</name>
	<version>1.0.0</version>
	<description>The teleop package</description>

	<maintainer email="TTaylorStephen@gmail.com">stephen</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rospy</build_depend>
	<exec_depend>rospy</exec_depend>
	<buildtool_depend>catkin</buildtool_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
	<!-- Other tools can request additional information be placed here -->
	</export>
</package>
